fixed overflow

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 	vertical-align: baseline;
     text-decoration: none;
     list-style: none;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
